Introduce and enforce checkstyle.xml from winery