@@ -22,7 +22,6 @@ import org.opentosca.planbuilder.service.model.GeneratePlanForTopology;
 import org.opentosca.planbuilder.service.model.PlanGenerationState;
 
 /**
- *
  * Copyright 2015 IAAS University of Stuttgart <br>
  * <br>
  * <p>
@@ -30,109 +29,105 @@ import org.opentosca.planbuilder.service.model.PlanGenerationState;
  * </p>
  *
  * @author Kalman Kepes - kepeskn@studi.informatik.uni-stuttgart.de
- *
  */
 @Path("planbuilder")
 public class RootResource {
 
-    @Context
-    UriInfo uriInfo;
+  @Context
+  UriInfo uriInfo;
 
+  @GET
+  @Produces("text/html")
+  public Response getRootPage() {
+    return Response.ok("<html><body><h1>Hello to the PlanBuilder Service.</h1> <h2>To use the PlanBuilder Service send a POST Request with the following example body:</h2><textarea style=\"width:auto;height:auto;min-width:300px;min-height:200px\"> <generatePlanForTopology><CSARURL>http://<url-to-csar-file></CSARURL><PLANPOSTURL>http://<url-for-sending-plan-back-with-POST></PLANPOSTURL></generatePlanForTopology></textarea></body></html>")
+      .build();
+  }
 
-    @GET
-    @Produces("text/html")
-    public Response getRootPage() {
-        return Response.ok("<html><body><h1>Hello to the PlanBuilder Service.</h1> <h2>To use the PlanBuilder Service send a POST Request with the following example body:</h2><textarea style=\"width:auto;height:auto;min-width:300px;min-height:200px\"> <generatePlanForTopology><CSARURL>http://<url-to-csar-file></CSARURL><PLANPOSTURL>http://<url-for-sending-plan-back-with-POST></PLANPOSTURL></generatePlanForTopology></textarea></body></html>")
-                       .build();
+  @Path("async/{taskId}")
+  public TaskResource getTask(@PathParam("taskId") final String taskId) {
+    if (RunningTasks.tasks.containsKey(taskId)) {
+      return new TaskResource(RunningTasks.tasks.get(taskId));
+    } else {
+      return null;
     }
 
-    @Path("async/{taskId}")
-    public TaskResource getTask(@PathParam("taskId") final String taskId) {
-        if (RunningTasks.tasks.containsKey(taskId)) {
-            return new TaskResource(RunningTasks.tasks.get(taskId));
-        } else {
-            return null;
-        }
+  }
 
+  @POST
+  @Consumes("application/xml")
+  @Produces("application/xml")
+  @Path("async")
+  public Response generateBuildPlanAsync(final GeneratePlanForTopology generatePlanForTopology) {
+
+    URL csarURL = null;
+    URL planPostURL = null;
+
+    try {
+      csarURL = new URL(generatePlanForTopology.CSARURL);
+      planPostURL = new URL(generatePlanForTopology.PLANPOSTURL);
+    } catch (final MalformedURLException e) {
+      return Response.status(Status.BAD_REQUEST).entity(Util.getStacktrace(e)).build();
     }
 
-    @POST
-    @Consumes("application/xml")
-    @Produces("application/xml")
-    @Path("async")
-    public Response generateBuildPlanAsync(final GeneratePlanForTopology generatePlanForTopology) {
+    final PlanGenerationState newTaskState = new PlanGenerationState(csarURL, planPostURL);
 
-        URL csarURL = null;
-        URL planPostURL = null;
+    final String newId = RunningTasks.generateId();
+    RunningTasks.tasks.put(newId, newTaskState);
 
-        try {
-            csarURL = new URL(generatePlanForTopology.CSARURL);
-            planPostURL = new URL(generatePlanForTopology.PLANPOSTURL);
-        }
-        catch (final MalformedURLException e) {
-            return Response.status(Status.BAD_REQUEST).entity(Util.getStacktrace(e)).build();
-        }
+    new Thread(new TaskWorkerRunnable(newTaskState)).start();
 
-        final PlanGenerationState newTaskState = new PlanGenerationState(csarURL, planPostURL);
+    return Response.created(URI.create(this.uriInfo.getAbsolutePath() + "/" + newId)).build();
+  }
 
-        final String newId = RunningTasks.generateId();
-        RunningTasks.tasks.put(newId, newTaskState);
+  /**
+   * <p>
+   * Given the paramaters CSARURL and PLANPOSTURL in the request, this method does the following: <br>
+   * - Check whether the given parameters are URL's<br>
+   * - Download the CSAR denoted by the CSARURL parameter<br>
+   * - Load the CSAR into the OpenTOSCA Core <br>
+   * - Generate BuildPlans for the given CSAR <br>
+   * - Send the the first generated BuildPlan to the given PLANPOSTURL using a HTTP POST
+   * </p>
+   *
+   * @param generatePlanForTopology a wrapper class for the parameters CSARURL and PLANPOSTURL
+   * @return a HTTP Response appropriate to the situation (e.g. error, success,..)
+   */
+  @POST
+  @Consumes("application/xml")
+  @Produces("application/xml")
+  @Path("sync")
+  public Response generateBuildPlanSync(final GeneratePlanForTopology generatePlanForTopology) {
 
-        new Thread(new TaskWorkerRunnable(newTaskState)).start();
+    URL csarURL = null;
+    URL planPostURL = null;
 
-        return Response.created(URI.create(this.uriInfo.getAbsolutePath() + "/" + newId)).build();
+    try {
+      csarURL = new URL(generatePlanForTopology.CSARURL);
+      planPostURL = new URL(generatePlanForTopology.PLANPOSTURL);
+    } catch (final MalformedURLException e) {
+      return Response.status(Status.BAD_REQUEST).entity(Util.getStacktrace(e)).build();
     }
 
-    /**
-     * <p>
-     * Given the paramaters CSARURL and PLANPOSTURL in the request, this method does the following: <br>
-     * - Check whether the given parameters are URL's<br>
-     * - Download the CSAR denoted by the CSARURL parameter<br>
-     * - Load the CSAR into the OpenTOSCA Core <br>
-     * - Generate BuildPlans for the given CSAR <br>
-     * - Send the the first generated BuildPlan to the given PLANPOSTURL using a HTTP POST
-     * </p>
-     *
-     * @param generatePlanForTopology a wrapper class for the parameters CSARURL and PLANPOSTURL
-     * @return a HTTP Response appropriate to the situation (e.g. error, success,..)
-     */
-    @POST
-    @Consumes("application/xml")
-    @Produces("application/xml")
-    @Path("sync")
-    public Response generateBuildPlanSync(final GeneratePlanForTopology generatePlanForTopology) {
+    final PlanGenerationState newTaskState = new PlanGenerationState(csarURL, planPostURL);
 
-        URL csarURL = null;
-        URL planPostURL = null;
+    final String newId = RunningTasks.generateId();
+    RunningTasks.tasks.put(newId, newTaskState);
 
-        try {
-            csarURL = new URL(generatePlanForTopology.CSARURL);
-            planPostURL = new URL(generatePlanForTopology.PLANPOSTURL);
-        }
-        catch (final MalformedURLException e) {
-            return Response.status(Status.BAD_REQUEST).entity(Util.getStacktrace(e)).build();
-        }
+    final TaskWorkerRunnable worker = new TaskWorkerRunnable(newTaskState);
 
-        final PlanGenerationState newTaskState = new PlanGenerationState(csarURL, planPostURL);
+    worker.run();
 
-        final String newId = RunningTasks.generateId();
-        RunningTasks.tasks.put(newId, newTaskState);
-
-        final TaskWorkerRunnable worker = new TaskWorkerRunnable(newTaskState);
-
-        worker.run();
-
-        // if the worker run is finished, we're either in a failed state or
-        // everything worked
-        switch (worker.getState().currentState) {
-            case CSARDOWNLOADFAILED:
-                return Response.status(Status.INTERNAL_SERVER_ERROR).entity(worker.getState()).build();
-            case PLANGENERATIONFAILED:
-                return Response.status(Status.INTERNAL_SERVER_ERROR).entity(worker.getState()).build();
-            case PLANSENDINGFAILED:
-                return Response.status(Status.INTERNAL_SERVER_ERROR).entity(worker.getState()).build();
-            default:
-                return Response.ok().entity(worker.getState()).build();
-        }
+    // if the worker run is finished, we're either in a failed state or
+    // everything worked
+    switch (worker.getState().currentState) {
+      case CSARDOWNLOADFAILED:
+        return Response.status(Status.INTERNAL_SERVER_ERROR).entity(worker.getState()).build();
+      case PLANGENERATIONFAILED:
+        return Response.status(Status.INTERNAL_SERVER_ERROR).entity(worker.getState()).build();
+      case PLANSENDINGFAILED:
+        return Response.status(Status.INTERNAL_SERVER_ERROR).entity(worker.getState()).build();
+      default:
+        return Response.ok().entity(worker.getState()).build();
     }
+  }
 }
